Get mobile to work

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,  initial-scale=1.0, maximum-scale=1.0" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+
+  <script src="http://192.168.0.244:8080/target/target-script-min.js"></script>
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Interactive Mountain Creek Map" />
 
