--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 
   <!-- <script src="http://192.168.0.151:8080/target/target-script-min.js"></script> -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SGNK0QVDP0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SGNK0QVDP0');
+  </script>
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Interactive Mountain Creek Map" />
 
