--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SGNK0QVDP0"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q62ELEGSYT"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-SGNK0QVDP0');
+    gtag('config', 'G-Q62ELEGSYT');
   </script>
 </body>
 
